add changes to css

--- a/src/main/webapp/css/style-login.css
+++ b/src/main/webapp/css/style-login.css
@@ -93,3 +93,11 @@ h1 {
 .bloque-left {
     text-align: left;
 }
+
+#authMessage{
+    color: red;
+}
+
+#authMessage2{
+    color: rgb(29, 170, 29);
+}
